# quantman

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  DEVELOPMENT_LOG.md  Dockerfile  heuije_notes.md  qa_findings.md  verify_e2e.py
core/: pyproject.toml  verify_phase1.py
core/data/: Apple Inc..parquet  Crude Oil WTI Futures Analysis_260429.xlsx  MOVE 지수.parquet  S&P500.parquet  SKEW 지수.parquet  VIX 3개월.parquet  VIX 기간구조.parquet  VIX.parquet  VVIX.parquet  macro_daily.csv  ticker_db.json  user_stocks.json  wti_daily.csv  구리금비율.parquet  구리선물.parquet  금.parquet  금선물.parquet  금융여건지수.parquet  기대인플레이션10년.parquet  나스닥100선물.parquet  나스닥선물.parquet  달러지수.parquet  미국채10년.parquet  미국채2년.parquet  미국채30년.parquet  비트코인.parquet  삼성전자.parquet  실효기준금리.parquet  애플.parquet  원유선물.parquet  유가(WTI).parquet  은.parquet  은선물.parquet  장단기금리차10Y2Y.parquet  장단기금리차10Y3M.parquet  천연가스.parquet  천연가스선물.parquet  코스피200.parquet  코스피200선물.parquet  투자등급스프레드.parquet  (+4 more)
core/data/fundamentals/: Apple Inc..parquet  삼성전자.parquet
core/quant_core/: __init__.py  analysis.py  backtest.py  data_fetcher.py  dataset.py  engine.py  exec_defaults.py  indicators.py  market_calendar.py  strategy.py  ticker_db.py
core/quant_core/oil_futures/: __init__.py  backtest.py  cli.py  data.py  metrics.py  optimizer.py  signals.py
core/tests/: test_market_calendar_sync.py  test_oil_futures.py
local/: QuantPlatformLocal.spec  RELEASE_NOTES_v0.8.0-beta.md  RELEASE_NOTES_v0.8.1-beta.md  RELEASE_NOTES_v0.8.11-beta.md  RELEASE_NOTES_v0.8.2-beta.md  RELEASE_NOTES_v0.8.4-beta.md  RELEASE_NOTES_v0.8.6-beta.md  desktop.py  run.py  (+12 more)
(+156 files in other folders)
