[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-core"
version = "0.1.0"
description = "퀀트 플랫폼 공유 코어 — 지표·백테스트·분석·전략 스키마"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "pyarrow>=14.0",
    "yfinance>=0.2.40",
    "finance-datareader>=0.9.50",
    "requests>=2.31",
]

[tool.setuptools]
packages = ["quant_core"]
