[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-core"
version = "0.1.0"
description = "퀀트 플랫폼 공유 코어 — 지표·백테스트·분석·전략 스키마"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "pyarrow>=14.0",
    "yfinance>=0.2.40",
    "finance-datareader>=0.9.50",
    "requests>=2.31",
]

[project.optional-dependencies]
# 개발/빌드 전용 — 시장 세션 JSON 생성기(gen_market_sessions.py)에서만 사용.
# 런타임(서버·로컬앱)은 생성된 JSON + stdlib zoneinfo만 쓰므로 번들 불필요.
calendar-gen = ["exchange_calendars>=4.5"]

[tool.setuptools]
packages = ["quant_core", "quant_core.oil_futures"]

[tool.setuptools.package-data]
# 시장 세션 캘린더 + S&P500 유니버스 JSON을 패키지에 포함.
quant_core = ["calendars/*.json", "universe/*.json"]
